2001-02-07  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: Rebecca Schulman  <rebecka@eazel.com>

	This change is needed to enable the bonobo-level fix to Nautilus
	bug 6023 (throbber and proxy processes still around after Nautilus
	is quit). The throbber was unreffing itself on destroy, which is
	wrong. However, Bonobo was leaking a reference to any toolbar
	control item, so the two bugs were masking each other.
	
	* components/throbber/nautilus-throbber.c
	(nautilus_throbber_destroy): Remove incorrect unref.
	(nautilus_throbber_initialize): Formatting tweaks

2001-02-08  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-gnome-extensions.c:
	(widget_destroy_callback), (icon_selected_callback),
	(icon_cancel_pressed):
	fixed bug 6458, crash if you quickly press cancel after pressing
	OK in the icon picker; fixed by setting a boolean once the
	picker has been dismissed, and checking it so we don't do it twice.
	
2001-02-08  Andy Hertzfeld  <andy@eazel.com>
	
	* src/nautilus-location-bar.c,h: (get_file_info_list),
	(try_to_expand_path), (editable_key_press_callback),
	(real_activate), (destroy), (nautilus_location_bar_initialize),
	(nautilus_location_bar_new), (nautilus_location_bar_set_location),
	(nautilus_location_bar_get_location),
	(nautilus_location_bar_update_label):

	fixed bug 6369, sluggish keyboard response in location bar. I improved
	this in two different ways: the expansion code is deferred to idle
	time now, so it doesn't get in the way of fast typing.  Also, the
	file info list is cached in memory, so it doesn't have to load it
	again for every keystroke.  I also made the instance variables
	private, instead of being exposed in the .h file.
	
2001-02-08  Robey Pointer  <robey@eazel.com>

	* components/services/install/nautilus-view/nautilus-service-instal
	l-view.c: (nautilus_service_install_downloading),
	(nautilus_service_install_preflight_check),
	(previous_install_finished), (nautilus_service_install_installing),